--- a/templates/aut.html
+++ b/templates/aut.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/static/aut.css">
+    <link rel="stylesheet" type="text/css" href="/static/aut.css">
     <title>Automat</title>
 </head>
 <body>
 <div class="user_bar">
     <p class="user_bar_half">USER: {{ user }}</p>
     <p class="user_bar_half">BALANCE: {{ balance }}</p>
+    <a href="/casino"><button class="btn_user">Back to menu</button></a>
     <a href="/"><button class="btn_user">Change user</button></a>
 </div>
 <div class="left_menu">
