--- a/templates/cas.html
+++ b/templates/cas.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/static/cas.css">
+    <link rel="stylesheet" type="text/css" href="/static/cas.css">
     <title>Casino Royale</title>
 </head>
 <body>
 <h1>CASINO ROYALE</h1>
 <div class="buttons">
     <a href=/casino/Ruleta><button class=casino_btn>Ruleta</button></a>
-    <a href=/casino/Kostky><button class=casino_btn>Kostky</button></a>
+    <a href=/casino/Dice><button class=casino_btn>Dice</button></a>
     <a href=/casino/Automat><button class=casino_btn>Automat</button></a>
 </div>
 </body>
