--- a/templates/cas.html
+++ b/templates/cas.html
@@ -11,7 +11,7 @@
 <div class="buttons">
 
     <a href=/casino/Ruleta><button id="btn1" class=casino_btn></button></a>
-    <a href=/casino/Kostky><button id="btn2" class=casino_btn></button></a>
+    <a href=/casino/Dice><button id="btn2" class=casino_btn></button></a>
     <a href=/casino/Automat><button id="btn3" class=casino_btn></button></a>
 </div>
 </div>
