--- a/templates/dice.html
+++ b/templates/dice.html
@@ -10,6 +10,7 @@
 <div class="user_bar">
     <p class="user_bar_half">USER: {{ user }}</p>
     <p class="user_bar_half">BALANCE: {{ balance }}</p>
+    <a href="/casino"><button class="btn_user">Back to menu</button></a>
     <a href="/"><button class="btn_user">Change user</button></a>
 </div>
 <div class="Top">
