--- a/static/dice.css
+++ b/static/dice.css
@@ -156,3 +156,54 @@ body {
     background-color: rgba(20,0,0,0.15);
     border-radius: 20%;
 }
+
+.alertWin{
+	border: 4px solid black;
+	position: absolute;
+	left: 32%;
+	width: 36%;
+	height: 70px;
+	text-align: center;
+	background-color: #006400;
+	color: white;
+	font-size: 26px;
+}
+
+.alertLose{
+	border: 4px solid black;
+	position: absolute;
+	left: 32%;
+	width: 36%;
+	height: 70px;
+	text-align: center;
+	background-color: #8b0000;
+	color: white;
+	font-size: 26px;
+}
+
+.alertTie{
+	border: 4px solid black;
+	position: absolute;
+	left: 32%;
+	width: 36%;
+	height: 70px;
+	text-align: center;
+	background-color: #36013f;
+	color: white;
+	font-size: 26px;
+}
+
+.closeAlert{
+	margin-left: 0px;
+	color: white;
+	font-weight: bold;
+	float: right;
+	font-size: 35px;
+	line-height: 25px;
+	cursor: pointer;
+	transition: 0.5s;
+}
+
+.closeAlert:hover{
+	color: black;
+}
