--- a/static/aut.css
+++ b/static/aut.css
@@ -86,7 +86,7 @@ body {
     position: fixed;
     background-color: rgba(255,215,0,0.85);
     width: 180px;
-    height: 100px;
+    height: 130px;
     bottom: 0;
     left: 0;
     border-top: 5px solid black;
@@ -105,7 +105,45 @@ body {
     border: none;
     color: white;
     font-size: medium;
+    cursor: pointer;
 }
 .btn_user:hover{
     background-color: rgba(0,0,0,0.8);
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+  background-color: rgba(255,215,0,0.85);
+  color: black;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%;
+}
+
+.close {
+  color: #000;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #aaaaaa;
+  text-decoration: none;
+  cursor: pointer;
 }
