--- a/static/cas.css
+++ b/static/cas.css
@@ -11,7 +11,7 @@ body {
     height: 200px;
     width: 200px;
 }
-h1{
+#h1{
     font-size: 80px;
     text-align: center;
     color: white;
@@ -62,7 +62,7 @@ h1{
     position: fixed;
     background-color: rgba(50,195,50,0.85);
     width: 180px;
-    height: 100px;
+    height: 130px;
     bottom: 0;
     left: 0;
     border-top: 2px solid white;
@@ -81,7 +81,41 @@ h1{
     border: none;
     color: white;
     font-size: medium;
+    cursor: pointer;
 }
 .btn_user:hover{
     background-color: rgba(0,0,0,0.8);
+}
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+}
+.modal-content {
+  background-color: rgba(50,195,50,0.85);
+  color: white;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%;
+}
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
