--- a/templates/cas.html
+++ b/templates/cas.html
@@ -19,7 +19,6 @@
 <div class="user_bar">
     <p class="user_bar_half">USER: {{ user }}</p>
     <p class="user_bar_half">BALANCE: {{ balance }}</p>
-    <a href="/"><button class="btn_user">Back to menu</button></a>
     <a href="/"><button class="btn_user">Change user</button></a>
     <button class="btn_user" id="modal_btn">Help</button>
 </div>
@@ -31,47 +30,32 @@
   <div class="modal-content">   
     <span class="close">&times;</span>
     <center><h1>HOW TO PLAY AT CASINO ROYALE</h1></center>
+        <br>
+        <h2 style="padding-left: 30px;">USER MENU</h2>
 
-        <h2 style="padding-left: 30px;">ROULETTE RULES</h2>
+        <p>At bottom left of your screen you can see your user menu.</p>
 
-        <p>Roulette is a classic casino game consisting of a wheel partitioned into the numbers 0-36, and a table on which to
-        place bets.</p>
+        <p>This menu contains:</p>
 
-        <p>Numbers 1-36 on the wheel are coloured red or black, while the 0 is green.</p>
+        <p>- Name of user, which is logged in<br>
+        - Balance of user, which is logged in</p>
 
-        <p>When a game is played, algorithm selects one of the numbers 0-36, and this will be the winning number.</p>
+        <p>Button "Change user" brings you back to loggin screen, where you can change users.</p>
 
-        <p>Bets are placed on table before the Bet button is clicked, and these bets can be placed on a variety of different
-        outcomes.</p>
+        <p>Button "Help" brings up popup, which shows you this help screen.</p>
 
-        <h2 style="padding-left: 30px;">GAME CONTROLS</h2>
+        <br>
+        <h2 style="padding-left: 30px;">GAMES</h2>
 
-        <p>Click on a specific number, or a betting choice in betting area to place a bet.
-        You can place a bet on any of the active betting fields.</p>
+        <p>At the bottom of the screen are three games to choose from</p>
 
-        <p>Select "2x" to double your current bet</p>
-
-        <p>Choice <b>Even</b> includes numbers: 2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36</p>
-        <p>Choice <b>Odd</b> includes numbers: 1,3,5,7,9,11,13,15,17,19,21,23,25,27,29,31,33,35</p>
-        <p>Choice <b>Red</b> includes numbers: 1,3,5,7,9,12,14,16,18,19,21,23,25,27,30,32,34,36</p>
-        <p>Choice <b>Black</b> includes numbers: 2,4,6,8,10,11,13,15,17,20,22,24,26,28,29,31,33,35</p>
-
-        <h2 style="padding-left: 30px;">BET TYPES</h2>
-
-        <p>You may bet on any of the following:</p>
-
-        <p>- <b>Red</b> pays 1 to 1&nbsp;&nbsp;&nbsp;&nbsp;||&nbsp;&nbsp;&nbsp;&nbsp;Win chance: 48.60%</p>
-
-        <p>- <b>Black</b> pays 1 to 1&nbsp;&nbsp;&nbsp;&nbsp;||&nbsp;&nbsp;&nbsp;&nbsp;Win chance: 48.60%</p>
-
-        <p>- <b>Even</b> pays 1 to 1&nbsp;&nbsp;&nbsp;&nbsp;||&nbsp;&nbsp;&nbsp;&nbsp;Win chance: 48.60%</p>
-
-        <p>- <b>Odd</b> pays 1 to 1&nbsp;&nbsp;&nbsp;&nbsp;||&nbsp;&nbsp;&nbsp;&nbsp;Win chance: 48.60%</p>
-
-        <p>- Straight up on any single number pays 35 to 1&nbsp;&nbsp;&nbsp;&nbsp;||&nbsp;&nbsp;&nbsp;&nbsp;Win chance: 2.70%</p>
+        <p>The game on the left is called <b>Roulette</b> and it is a classic European Roulette</p>
+        <p>The middle game is called <b>Dice</b></p>
+        <p>The game on the right is called <b>Slots</b></p>
   </div>
 
 </div>
+
 <script>
 // Get the modal
 var modal = document.getElementById("modal");
