--- a/templates/rul.html
+++ b/templates/rul.html
@@ -28,10 +28,9 @@
 
         <h2 style="padding-left: 30px;">ROULETTE RULES</h2>
 
-        <p>Roulette is a classic casino game consisting of a wheel partitioned into the numbers 0-36, and a table on which to
-        place bets.</p>
+        <p>Roulette is a classic casino European Roulette game.</p>
 
-        <p>Numbers 1-36 on the wheel are coloured red or black, while the 0 is green.</p>
+        <p>Numbers 1-36 on the board are coloured red or black, while the 0 is green.</p>
 
         <p>When a game is played, algorithm selects one of the numbers 0-36, and this will be the winning number.</p>
 
