--- a/templates/aut.html
+++ b/templates/aut.html
@@ -55,31 +55,17 @@
 
         <h2 style="padding-left: 30px;">SLOTS RULES</h2>
 
-        <p>Roulette is a classic casino game consisting of a wheel partitioned into the numbers 0-36, and a table on which to
-        place bets.</p>
+        <p>Slots really cannot be more easier. You simply select bet amount, and press play.</p>
 
-        <p>Numbers 1-36 on the wheel are coloured red or black, while the 0 is green.</p>
+        <p>Slot machine will spin and show 3 numbers next to each other.</p>
 
-        <p>When a game is played, algorithm selects one of the numbers 0-36, and this will be the winning number.</p>
+        <p>You win when those 3 numbers are the same.</p>
 
-        <p>Bets are placed on table before the Bet button is clicked, and these bets can be placed on a variety of different
-        outcomes.</p>
-
-        <h2 style="padding-left: 30px;">GAME CONTROLS</h2>
-
-        <p>Click on a specific number, or a betting choice in betting area to place a bet.
-        You can place a bet on any of the active betting fields.</p>
-
-        <p>Select "2x" to double your current bet</p>
-
-        <p>Choice <b>Even</b> includes numbers: 2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36</p>
-        <p>Choice <b>Odd</b> includes numbers: 1,3,5,7,9,11,13,15,17,19,21,23,25,27,29,31,33,35</p>
-        <p>Choice <b>Red</b> includes numbers: 1,3,5,7,9,12,14,16,18,19,21,23,25,27,30,32,34,36</p>
-        <p>Choice <b>Black</b> includes numbers: 2,4,6,8,10,11,13,15,17,20,22,24,26,28,29,31,33,35</p>
+        <br>
 
         <h2 style="padding-left: 30px;">BET TYPES</h2>
 
-        <p>You may bet on any of the following:</p>
+        <p>At top left you can see how much you win with specific trio of numbers</p>
 
         <p>- <b>Red</b> pays 1 to 1&nbsp;&nbsp;&nbsp;&nbsp;||&nbsp;&nbsp;&nbsp;&nbsp;Win chance: 48.60%</p>
 
