changed styling for dice napoveda

--- a/templates/dice.html
+++ b/templates/dice.html
@@ -30,11 +30,11 @@
 
         <p>You, as a player, play against a computer controlled enemy. Whoever throws the bigger sum of numbers wins.</p>
 
-        <p>You can choose the amount of dice with which both you and the enemy throws. All the values will be shown in the table on the left.</p>
+        <p>You can choose the amount of dice with which both you and the enemy throw. All the values will be shown in the table on the left.</p>
 
-        <p>When a game is played, algorithm randomly generates numbers from 1 to 6 for each simulated throw.</p>
+        <p>When a game is played, the algorithm randomly generates numbers from 1 to 6 for each simulated throw.</p>
 
-        <p>You choose the amount you bet before you click the throw button. If you win, the bet amount is added to your balance, if you lose, it gets substracted, and if the game ends in a draw, your balance stays unchanged.</p>
+        <p>You choose the amount you bet before you click on the throw button. If you win, the bet amount is added to your balance, if you lose, it gets substracted, and if the game ends in a draw, your balance stays unchanged.</p>
 
         <h2 style="padding-left: 30px;">GAME CONTROLS</h2>
 
@@ -42,7 +42,7 @@
 
         <p>Select the amount of dice being thrown by each player.</p>
 
-        <p>Press the <b>Throw</b> button to start the game.</p>
+        <p>Press the <b>THROW</b> button to start the game.</p>
   </div>
 
 </div>
