--- a/static/dice.css
+++ b/static/dice.css
@@ -63,8 +63,8 @@ body {
 }
 
 .modal-content {
-  background-color: rgba(255,30,0,0.85);
-  color: black;
+  background-color: rgba(150,10,10,0.95);
+  color: white;
   margin: auto;
   padding: 20px;
   border: 1px solid #888;
