--- a/templates/aut.html
+++ b/templates/aut.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="/static/aut.css">
+    <link rel="icon" type="image/x-icon" href="static/SKINS/favicon.ico" />
     <title>Automat</title>
 </head>
 <body>
