--- a/templates/cas.html
+++ b/templates/cas.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="/static/cas.css">
+    <link rel="icon" type="image/x-icon" href="static/SKINS/favicon.ico" />
     <title>Casino Royale</title>
 </head>
 <body>
