--- a/templates/dice.html
+++ b/templates/dice.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="/static/dice.css">
+    <link rel="icon" type="image/x-icon" href="static/SKINS/favicon.ico" />
     <title>Dice</title>
 </head>
 
