--- a/templates/login.html
+++ b/templates/login.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="static/SKINS/favicon.ico" />
     <title>Login</title>
 </head>
 <body>
