Changed login aut help

--- a/templates/aut.html
+++ b/templates/aut.html
@@ -67,15 +67,16 @@
 
         <p>At top left you can see how much you win with specific trio of numbers</p>
 
-        <p>- <b>Red</b> pays 1 to 1&nbsp;&nbsp;&nbsp;&nbsp;||&nbsp;&nbsp;&nbsp;&nbsp;Win chance: 48.60%</p>
-
-        <p>- <b>Black</b> pays 1 to 1&nbsp;&nbsp;&nbsp;&nbsp;||&nbsp;&nbsp;&nbsp;&nbsp;Win chance: 48.60%</p>
-
-        <p>- <b>Even</b> pays 1 to 1&nbsp;&nbsp;&nbsp;&nbsp;||&nbsp;&nbsp;&nbsp;&nbsp;Win chance: 48.60%</p>
-
-        <p>- <b>Odd</b> pays 1 to 1&nbsp;&nbsp;&nbsp;&nbsp;||&nbsp;&nbsp;&nbsp;&nbsp;Win chance: 48.60%</p>
-
-        <p>- Straight up on any single number pays 35 to 1&nbsp;&nbsp;&nbsp;&nbsp;||&nbsp;&nbsp;&nbsp;&nbsp;Win chance: 2.70%</p>
+        <p>- <b>Numb 1</b> pays 20x bet&nbsp;&nbsp;&nbsp;&nbsp;||&nbsp;&nbsp;&nbsp;&nbsp;Win chance: 3%</p>
+        <p>- <b>Numb 2</b> pays 40x bet&nbsp;&nbsp;&nbsp;&nbsp;||&nbsp;&nbsp;&nbsp;&nbsp;Win chance: 0.8%</p>
+        <p>- <b>Numb 3</b> pays 80x bet&nbsp;&nbsp;&nbsp;&nbsp;||&nbsp;&nbsp;&nbsp;&nbsp;Win chance: 0.3375%</p>
+      <p>- <b>Numb 4</b> pays 80x bet&nbsp;&nbsp;&nbsp;&nbsp;||&nbsp;&nbsp;&nbsp;&nbsp;Win chance: 0.3375%</p>
+      <p>- <b>Numb 5</b> pays 150x bet&nbsp;&nbsp;&nbsp;&nbsp;||&nbsp;&nbsp;&nbsp;&nbsp;Win chance: 0.0125%</p>
+      <p>- <b>Numb 6</b> pays 150x bet&nbsp;&nbsp;&nbsp;&nbsp;||&nbsp;&nbsp;&nbsp;&nbsp;Win chance: 0.0125%</p>
+      <p>- <b>Numb 7</b> pays 300x bet&nbsp;&nbsp;&nbsp;&nbsp;||&nbsp;&nbsp;&nbsp;&nbsp;Win chance: 0.0027%</p>
+      <p>- <b>Numb 8</b> pays 300x bet&nbsp;&nbsp;&nbsp;&nbsp;||&nbsp;&nbsp;&nbsp;&nbsp;Win chance: 0.0027%</p>
+      <p>- <b>Numb 9</b> pays 800x bet&nbsp;&nbsp;&nbsp;&nbsp;||&nbsp;&nbsp;&nbsp;&nbsp;Win chance: 0.0008%</p>
+      <p>- <b>Numb 0</b> pays 800x bet&nbsp;&nbsp;&nbsp;&nbsp;||&nbsp;&nbsp;&nbsp;&nbsp;Win chance: 0.0008%</p>
   </div>
 
 </div>
