--- a/templates/aut.html
+++ b/templates/aut.html
@@ -6,6 +6,13 @@
     <title>Automat</title>
 </head>
 <body>
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    {% for message in messages %}
+        <h2 style="background: white; color: black; text-align: center;">{{ message }}</h2>
+      {% endfor %}
+  {% endif %}
+{% endwith %}
 <div class="user_bar">
     <p class="user_bar_half">USER: {{ user }}</p>
     <p class="user_bar_half">BALANCE: {{ balance }}</p>
