--- a/templates/cas.html
+++ b/templates/cas.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="/static/cas.css">
+    <link rel="icon" type="image/x-icon" href="static/SKINS/favicon.ico" />
     <title>Casino Royale</title>
 </head>
 <body>
@@ -39,10 +40,13 @@
 
         <p>- Name of user, which is logged in<br>
         - Balance of user, which is logged in</p>
+        <p>Once you hit negative balance, you will lose and your account will be deleted.</p>
 
         <p>Button "Change user" brings you back to loggin screen, where you can change users.</p>
 
         <p>Button "Help" brings up popup, which shows you this help screen.</p>
+
+        <p>Have fun :)</p>
 
         <br>
         <h2 style="padding-left: 30px;">GAMES</h2>
