--- a/templates/rul.html
+++ b/templates/rul.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="/static/rul.css">
+    <link rel="icon" type="image/x-icon" href="static/SKINS/favicon.ico" />
     <title>Ruleta</title>
 </head>
 <body>
@@ -80,8 +81,8 @@
         <div id="center">
 
             <div class="choice_top">
-                <input class="btn_choice btn_white btn_green_text" type="submit" onclick="printChoice('Even')" value="Even">
-                <input class="btn_choice btn_white btn_green_text" type="submit" onclick="printChoice('Odd')" value="Odd">
+                <input class="btn_choice btn_white btn_green_text" type="submit" onclick="printChoice('even')" value="Even">
+                <input class="btn_choice btn_white btn_green_text" type="submit" onclick="printChoice('odd')" value="Odd">
             </div>
 
             <div>
@@ -123,29 +124,31 @@
                 <input class="btn_choice btn_red" type="submit" onclick="printChoice(16)" value="16">
                 <input class="btn_choice btn_red" type="submit" onclick="printChoice(19)" value="19">
                 <input class="btn_choice btn_black" type="submit" onclick="printChoice(22)" value="22">
-                <input class="btn_choice btn_red" type="submit" onclick="printChoice(25)" value="25">
+                <input class="btn_choice btn_red" type="submit" onclick="printChoice(25)" value=25>
                 <input class="btn_choice btn_black" type="submit" onclick="printChoice(28)" value="28">
                 <input class="btn_choice btn_black" type="submit" onclick="printChoice(31)" value="31">
                 <input class="btn_choice btn_red" type="submit" onclick="printChoice(34)" value="34">
             </div>
 
             <div class="choice_bottom">
-                <input class="btn_choice btn_white btn_red_text" type="submit" onclick="printChoice('Red')" value="Red">
-                <input class="btn_choice btn_white btn_black_text" type="submit" onclick="printChoice('Black')" value="Black">
+                <input class="btn_choice btn_white btn_red_text" type="submit" onclick="printChoice('red')" value="Red">
+                <input class="btn_choice btn_white btn_black_text" type="submit" onclick="printChoice('black')" value="Black">
             </div>
             
         </div>
     </div>
+
+
         <div class="bet_choice">
             <div class="bet_choice_middle">
                 <div style='float:left; width:70%'>
                     <p class="choice_label">CHOICE: </p>
                 </div>
-                <div style='float:left; width:10%; margin-left:30px'>
-                    
+                <div style='float:left; width:20%; margin-left:30px'>
+                    <p class="choice_label" name="choice" id="chosen_num" value="{{ choice }}">{{ choice }}</p>
                 </div>
                 <form method="POST">
-                    <p class="choice_label" name="choice" id="chosen_num" value="{{ choice }}"> </p>
+                    <input type="hidden" id="hidden_choice" name="hidden_choice" value="{{ choice }}">
                     <input class="rul_bet" id="rul_bet" type="text" value="{{ bet }}" name="bet">
                     <input class="rul_play" type="submit" value="BET"><br>
                 </form>
@@ -154,13 +157,24 @@
         </div>
 </div>
 
+<br><br>
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        {% for message in messages %}
+            <h2 style="background: white; color: black; text-align: center;">{{ message }}</h2>
+          {% endfor %}
+      {% endif %}
+    {% endwith %}
+
 <script>
 function printChoice(number) {
-  var x = document.getElementById("chosen_num");
-  x.innerHTML = number;
+    var x = document.getElementById("chosen_num");
+    x.innerHTML = number;
+    var y = document.getElementById("hidden_choice");
+    y.value = number;
 }
 function changeValue(){
- document.getElementById('rul_bet').value= "55";
+ // TODO
 }
 // Get the modal
 var modal = document.getElementById("modal");
