red help message

--- a/templates/cas.html
+++ b/templates/cas.html
@@ -40,9 +40,9 @@
 
         <p>- Name of user, which is logged in<br>
         - Balance of user, which is logged in</p>
-        <p>Once you hit negative balance, you will lose and your account will be deleted.</p>
+        <p class="red">Once you hit negative balance, you will lose and your account will be deleted.</p>
 
-        <p>Button "Change user" brings you back to loggin screen, where you can change users.</p>
+        <p>Button "Change user" brings you back to login screen, where you can change users.</p>
 
         <p>Button "Help" brings up popup, which shows you this help screen.</p>
 
