Osetreni sazek u rulety

--- a/templates/rul.html
+++ b/templates/rul.html
@@ -173,8 +173,9 @@ function printChoice(number) {
     var y = document.getElementById("hidden_choice");
     y.value = number;
 }
-function changeValue(){
- // TODO
+function doubleBet(){
+    var z = document.getElementById("rul_bet");
+    z.value = z.value * 2;
 }
 // Get the modal
 var modal = document.getElementById("modal");
