--- a/static/rul.css
+++ b/static/rul.css
@@ -234,8 +234,20 @@ body {
     margin-left: 50px;
     text-align: center;
     cursor: pointer;
+    height: 20px;
+    width: 50px;
+    background-color: rgba(0,0,0,0.5);
+    color: white;
+    border-radius: 20%;
+    border: 1px solid rgba(0,0,0,1);
 }
 .rul_2x{
-    float: right;
-    margin-right: 52px;
+    cursor: pointer;
+    margin-left: 262px;
+    height: 20px;
+    width: 50px;
+    background-color: rgba(0,0,0,0.5);
+    color: white;
+    border-radius: 20%;
+    border: 1px solid rgba(0,0,0,1);
 }
